# IFEM-Poisson

./: .gitignore  CMakeLists.txt  Poisson.C  Poisson.h  PoissonArgs.C  PoissonArgs.h  PoissonSolutions.C  PoissonSolutions.h  PoissonSource.C  PoissonSource.h  README.md  SIMPoisson.C  SIMPoisson.h  SIMPoisson1D.C  SIMPoisson2D.C  SIMPoisson3D.C  main_Poisson.C  main_Poisson3D.C
Adaptive_benchmark/: ArctanSphericalWaveFront.xinp  Fischera.g2  FischeraCorner.xinp  FischeraLine.xinp  GenFischera.py  Peak3D.xinp
Test/: Annulus.xinp  Annulus_sep_proj.reg  Annulus_sep_proj_LR.reg  Backstep-3-LR.reg  Backstep-3-LR.xinp  CGL2-LR.reg  CGL2-petsc.reg  CGL2-petsc.xinp  CGL2.reg  CGL2.xinp  Cube-2-LR.reg  Cube-2-LR.xinp  Cube-3-LR.reg  Cube-3-LR.xinp  Cube-kref.reg  Cube-kref.xinp  Cube-lag.reg  Cube-lag.xinp  Cube-mat.reg  Cube-mat.xinp  Cube-robin.reg  Cube-robin.xinp  Cube-subdivision.reg  Cube-subdivision.xinp  Cube.reg  Cube.xinp  CubeLR.reg  Cube_mat.hdf5  IL-truebeta-structured.reg  IL-truebeta-structured.xinp  Line-subdivision.reg  Line-subdivision.xinp  Line.reg  Line.xinp  Lshape.reg  Lshape.xinp  LshapeLR.reg  Sinus2D.reg  Sinus2D.xinp  Square-2-LR-r.reg  (+77 more)
Test/MPI/: CGL2-petsc.reg  CGL2-petsc.xinp  Cube-3-LR.reg  Cube-3-LR.xinp  Cube-subdivision.reg  Cube.reg  Square-2-LR.hreg  Square-2-LR.reg  Square-2-LR.xinp  Square-eig13-slepc.reg  Square-eig4.reg  Square.reg  Square.xinp  Waterfall3D_adap.reg  interior_layer_adap_dorfel.reg
doc/: Doxyfile.in  Poisson.dox.in
doc/Integrands/: Poisson.tex
jenkins/: build.sh
